# qtorganizer-mkcal

./: .gitignore  CMakeLists.txt  README
rpm/: qtorganizer-mkcal.spec
src/: CMakeLists.txt  helper.cpp  helper.h  itemcalendars.cpp  itemcalendars.h  mkcal.json  mkcalplugin.cpp  mkcalplugin.h  mkcalworker.cpp  mkcalworker.h
tests/: CMakeLists.txt  tst_engine.cpp
